--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,12 @@
         android:theme="@style/Theme.AnnuaireCnam"
         tools:targetApi="31">
         <activity
+            android:name=".activities.eleves.ElevesFormActivity"
+            android:exported="false" />
+        <activity
+            android:name=".activities.eleves.ElevesListActivity"
+            android:exported="false" />
+        <activity
             android:name=".activities.classes.ClasseFormActivity"
             android:exported="false" />
         <activity
