--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,10 +13,10 @@
         android:theme="@style/Theme.AnnuaireCnam"
         tools:targetApi="31">
         <activity
-            android:name=".activities.eleves.ElevesFormActivity"
+            android:name=".activities.eleves.EleveFormActivity"
             android:exported="false" />
         <activity
-            android:name=".activities.eleves.ElevesListActivity"
+            android:name=".activities.eleves.EleveListActivity"
             android:exported="false" />
         <activity
             android:name=".activities.classes.ClasseDetailActivity"
