--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,6 +12,15 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.AnnuaireCnam"
         tools:targetApi="31">
+
+        <activity
+            android:name=".activities.eleves.EleveFormActivity"
+            android:exported="false" />
+
+        <activity
+            android:name=".activities.eleves.EleveListActivity"
+            android:exported="false" />
+
         <activity
             android:name=".activities.classes.ClasseFormActivity"
             android:exported="false" />
@@ -24,15 +33,16 @@
         <activity
             android:name=".activities.matieres.MatiereListActivity"
             android:exported="false" />
+
         <activity
             android:name=".MainActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
     </application>
 
 </manifest>
