Modif activity classe_detail, MatiereList Modif Manifest rajout des activity MatierList2,EleveList2 Rajout de requètes dans DbManager de delete

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,6 +22,11 @@
             android:exported="false" />
 
         <activity
+            android:name=".activities.eleves.EleveListActivity2"
+            android:exported="false" />
+
+
+        <activity
             android:name=".activities.classes.ClasseDetailActivity"
             android:exported="false" />
         <activity
@@ -35,6 +40,9 @@
             android:exported="false" />
         <activity
             android:name=".activities.matieres.MatiereListActivity"
+            android:exported="false" />
+        <activity
+            android:name=".activities.matieres.MatiereListActivity2"
             android:exported="false" />
 
         <activity
