correction bug id debut

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,20 +12,21 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.AnnuaireCnam"
         tools:targetApi="31">
-
         <activity
-            android:name=".activities.eleves.EleveFormActivity"
+            android:name=".activities.notes.NoteActivity"
             android:exported="false" />
-
+        <activity
+            android:name=".activities.eleves.EleveEditActivity"
+            android:exported="false" />
+        <activity
+            android:name=".activities.eleves.EleveAddActivity"
+            android:exported="false" />
         <activity
             android:name=".activities.eleves.EleveListActivity"
             android:exported="false" />
-
         <activity
             android:name=".activities.eleves.EleveListActivity2"
             android:exported="false" />
-
-
         <activity
             android:name=".activities.classes.ClasseDetailActivity"
             android:exported="false" />
@@ -44,7 +45,6 @@
         <activity
             android:name=".activities.matieres.MatiereListActivity2"
             android:exported="false" />
-
         <activity
             android:name=".activities.matieres.MatiereDetailActivity"
             android:exported="false" />
@@ -53,10 +53,10 @@
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-
     </application>
 
 </manifest>
